# bom-agent

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/: __init__.py  agent.py  config.py  main.py  middleware.py  models.py  prompts.py  web_tools.py
