[project]
name = "bom-agent"
version = "0.1.0"
description = "LangChain-based BOM decomposition agent that expands products down to raw-material granularity using public web information."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
]

[project.scripts]
bom-agent = "src.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
